--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -12,29 +12,28 @@ header {
 
 /*=============== CTA ===================*/
 .cta {
-    margin-top: 2.5rem;
+    margin-top: 4.5rem;
     display: flex;
-    gap: 1.2rem;
+    gap: 2rem;
     justify-content:center;
 }
 
 /*=============== Header Socials ===================*/
 .header__socials {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.8rem;
+    gap: 1rem;
     position: absolute;
-    left:0;
-    bottom:3rem;
+    right: -3rem;
+    top: -3rem;
+    color: var(--color-primary);
 }
-
-.header__socials::after {
-    content: '';
-    width: 1px;
-    height: 2rem;
-    background: var(--color-primary);
-
+.social_icon {
+    color: var(--color-primary);
+    font-size: 16px;
+}
+.social_icon:hover {
+    color: var(--color-white);
+    font-size: 22px;
 }
 
 /*=============== Me ===================*/
